--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -758,10 +758,10 @@
                             var td8 = "<td class='text-center hide'>" + value.PackageId + "</td>";
                             var td9 = "<td class='text-center hide'>" + value.QtyKG + "</td>";
                             var td10 = "<td class='text-center hide'>" + (value.Amount / value.Quanity) + "</td>";
-                            var td10 = "<td class='text-center hide'>" + value.AccessoriesId + "</td>";
+                            var td11 = "<td class='text-center hide'>" + value.AccessoriesId + "</td>";
 
 
-                            var tr = "<tr class='text-sm'>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + "</tr>";
+                            var tr = "<tr class='text-sm'>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + td11 + "</tr>";
                             $("#tblListpackage tbody").append(tr)
                             debugger;
                             console.log((value.Amount * ddlPQuanity.val()));
@@ -1159,7 +1159,7 @@
                                 FGRId: tds.eq(6).html(),
                                 PackageId: tds.eq(7).html(),
                                 QtyKG: tds.eq(8).html(),
-                                AccessoriesId: tds.eq(9).html(),
+                                AccessoriesId: tds.eq(10).html(),
                                 
                             });
 
