--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -42,7 +42,7 @@
                     <a class="nav-link active  text-white  " id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false">RM Stock</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link  text-white  " id="custom-tabs-two-packageRMStock-tab" data-toggle="pill" href="#custom-tabs-two-packageRMStock" role="tab" aria-controls="custom-tabs-two-packageRMStock" aria-selected="false"> Pkg RM Stock</a>
+                    <a class="nav-link  text-white  " id="custom-tabs-two-packageRMStock-tab" data-toggle="pill" href="#custom-tabs-two-packageRMStock" role="tab" aria-controls="custom-tabs-two-packageRMStock" aria-selected="false">Packaging Stock</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white   " id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Purchase Details</a>
@@ -397,7 +397,7 @@
                                 <div class="row text-sm">
                                     <div class="col-3">
                                         <h6 class="text-left  text-white mb-0" @*style="height:10px;text-align:center"*@>
-                                            Package RM Stock
+                                            Packaging Stock
                                         </h6>
                                     </div>
 
