--- a/ERPWeb/Views/AgroConfiguration/DateWiseCollection.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DateWiseCollection.cshtml
@@ -22,7 +22,7 @@
                 <div class="card " style="background-color:#001f3f">
                     <div class="px-2 py-1" style="text-align: center;">
                         <div >
-                                <h5 class="float-left text-bold text-white" style="vertical-align:middle;margin-top:20px">
+                                <h5 class="float-left text-bold text-white align-items-center" style="vertical-align:middle;margin-top:15px">
                                     Date Collection
                                 </h5>
                             <div class="row">
@@ -61,15 +61,15 @@
                                     <div class="input-group input-group-sm">
                                         <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed pad" id="dptFromDate" placeholder="FromDate" name="dptFromDate" />
                                         <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
-                                            <span class="input-group-text">&#10008;</span>
+                                            <span class="input-group-text p-0">&#10008;</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-2 pad">
-                                    <div class="input-group input-group-sm">
+                                    <div class="input-group input-group-sm p-0">
                                         <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed pad" id="dptToDate" placeholder="ToDate" name="dptToDate" />
                                         <div class="input-group-prepend cursor-pointer remove-date dptToDate" style="cursor:pointer">
-                                            <span class="input-group-text">&#10008;</span>
+                                            <span class="input-group-text p-0">&#10008;</span>
                                         </div>
                                     </div>
                                 </div>
@@ -82,7 +82,7 @@
                                             <option value="EXCEL">EXCEL</option>
                                         </select>
                                         <span class="input-group-append">
-                                            <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
+                                            <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat p-0 pr-1"><i class="fas fa-download"></i></button>
                                         </span>
                                     </div>
                                 </div>
