--- a/ERPWeb/Views/AgroConfiguration/GetReturnRawMaterialReportList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetReturnRawMaterialReportList.cshtml
@@ -11,7 +11,7 @@
             <div class="col-md-12">
                 <div class="card" style="background-color:#001f3f">
                     <div class="px-2 py-1" style="text-align: center;">
-                        <div class="row">
+                        <div class="row align-items-center">
                             
                             <div class="col-md-2">
                                 <h5 class="float-left text-bold text-white">
@@ -47,7 +47,7 @@
                                 <div class="input-group input-group-sm">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" placeholder="FromDate" />
                                     <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
+                                        <span class="input-group-text p-0">&#10008;</span>
                                     </div>
                                 </div>
                             </div>
@@ -55,7 +55,7 @@
                                 <div class="input-group input-group-sm">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="ToDate" />
                                     <div class="input-group-prepend cursor-pointer remove-date dptToDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
+                                        <span class="input-group-text p-0">&#10008;</span>
                                     </div>
                                 </div>
                             </div>
@@ -68,7 +68,7 @@
                                         <option value="EXCEL">EXCEL</option>
                                     </select>
                                     <span class="input-group-append">
-                                        <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
+                                        <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat p-0 pr-1"><i class="fas fa-download"></i></button>
                                     </span>
                                 </div>
                             </div>
