--- a/ERPWeb/Views/AgroConfiguration/SalesCommissionReportList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesCommissionReportList.cshtml
@@ -12,7 +12,7 @@
             <div class="col-md-12">
                 <div class="card" style="background-color:#001f3f">
                     <div class="px-2 py-1" style="text-align: center;">
-                        <div class="row">
+                        <div class="row align-items-center">
 
                             <div class="col-md-3">
                                 <h5 class=" text-bold float-left text-white">
@@ -35,7 +35,7 @@
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" placeholder="From Date" />
                                     <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
+                                        <span class="input-group-text p-0">&#10008;</span>
                                     </div>
                                 </div>
                             </div>
@@ -44,7 +44,7 @@
                                 <div class="input-group input-group-sm ">
                                     <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="To Date" />
                                     <div class="input-group-prepend remove-date dptToDate" style="cursor:pointer">
-                                        <span class="input-group-text">&#10008;</span>
+                                        <span class="input-group-text p-0">&#10008;</span>
                                     </div>
                                 </div>
 
@@ -56,7 +56,7 @@
                                         <option value="EXCEL">EXCEL</option>
                                     </select>
                                     <span class="input-group-append">
-                                        <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
+                                        <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat p-0 pr-1"><i class="fas fa-download"></i></button>
                                     </span>
                                 </div>
                             </div>
