--- a/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
@@ -394,6 +394,7 @@
                         <div class="form-group col-md-12">
                             <label for="ddlStatus" class="control-label">Status</label>
                             <select class="form-control form-control-sm" id="ddlStatus">
+                                <option value="">--Select Status--</option>
                                 <option value="Active">Active</option>
                                 <option value="InActive">InActive</option>
                             </select>
@@ -443,8 +444,8 @@
                         <div class="form-group col-md-12">
                             <label for="ddlStatus" class="control-label">Status</label>
                             <select class="form-control form-control-sm select2" id="ddlStatusUnit">
-                                @*<option value="">--Select Status--</option>*@
-                                <option selected="selected" value="Active">Active</option>
+                                <option value="">--Select Status--</option>
+                                <option value="Active">Active</option>
                                 <option value="InActive">InActive</option>
                             </select>
                         </div>
@@ -503,8 +504,8 @@
                     <div class="col-md-12">
                         <label for="ddlStatus" class="control-label">Status</label>
                         <select class="form-control form-control-sm select2" id="ddlStatusRM">
-                            @*<option value="">--Select Status--</option>*@
-                            <option selected="selected" value="Active">Active</option>
+                            <option value="">--Select Status--</option>
+                            <option value="Active">Active</option>
                             <option value="InActive">InActive</option>
                         </select>
                     </div>
@@ -574,7 +575,8 @@
                     <div class="form-group col-md-2">
                         <label for="ddlStatus" class="control-label">Status</label>
                         <select class="form-control form-control-sm" id="ddlStatusSupplier">
-                            <option selected="selected" value="Active">Active</option>
+                            <option value="">--Select Status--</option>
+                            <option value="Active">Active</option>
                             <option value="InActive">InActive</option>
                         </select>
                     </div>
@@ -621,7 +623,8 @@
                         <div class="form-group col-md-12">
                             <label for="ddlStatus" class="control-label">Status</label>
                             <select class="form-control form-control-sm select2" id="ddlStatusProduct">
-                                <option selected="selected" value="Active">Active</option>
+                                <option value="">--Select Status--</option>
+                                <option value="Active">Active</option>
                                 <option value="InActive">InActive</option>
                             </select>
                         </div>
@@ -702,7 +705,8 @@
                         <div class="form-group col-md-12">
                             <label for="ddlStatus" class="control-label">Status</label>
                             <select class="form-control form-control-sm" id="ddlStatusMeasurement">
-                                <option selected="selected" value="Active">Active</option>
+                                <option value="">--Select Status--</option>
+                                <option value="Active">Active</option>
                                 <option value="InActive">InActive</option>
                             </select>
                             <span class="error hide required-ddlStatus font-weight-bold">Status Is Required</span>
@@ -755,8 +759,8 @@
                     <div class="col-md-12">
                         <label for="ddlStatusA" class="control-label">Status</label>
                         <select class="form-control form-control-sm select2" id="ddlStatusA">
-                            @*<option value="">--Select Status--</option>*@
-                            <option selected="selected" value="Active">Active</option>
+                            <option value="">--Select Status--</option>
+                            <option value="Active">Active</option>
                             <option value="InActive">InActive</option>
                         </select>
                     </div>
